# EconEdu

./: .breakpoints  README.md  home.html  main.py  pyproject.toml  style.css
templates/: base.html  home.html  index.html  login.html
website/: __init__.py  auth.py  models.py
website/static/: style.css
website/templates/: Signup.html  about_us.html  base.html  home.html  learning.html  login.html  quiz.html  quiz2.html  quiz3.html
