[tool.poetry]
name = "repl_python3_WebExploitProject"
version = "0.1.0"
description = ""
authors = ["Avanindra <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-SQLAlchemy = "^2.5.1"
Flask = "^2.0.2"
Flask-Login = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
